<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="buttonText">I am a button</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="radioButton">Radio Button</string>
    <string name="checkBox">Check Box</string>
    <string name="enableSomething">Enable Something</string>
    <string name="next">Next</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email">email</string>
    <string name="msg">My information to share</string>
    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="testToolbar">Test Toolbar</string>
    <string name="newMessage">Enter a new message</string>
</resources>
