<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.swkyl.androidlabs.StartActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.swkyl.androidlabs.LoginActivity"
        tools:showIn="@layout/activity_login"
        android:orientation="vertical">
        <TextView android:text="@string/login"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="43dp"
            android:layout_width="match_parent">
        </TextView>
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textEditPasteWindowLayout="@string/app_name"
            android:inputType="textEmailAddress">
        </EditText>
        <TextView android:text="@string/password"
            android:layout_height="43dp"
            android:layout_width="match_parent">
        </TextView>
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </EditText>

    </LinearLayout>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>