<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.swkyl.androidlabs.StartActivity">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_list_items"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.swkyl.androidlabs.ListItemsActivity">
        <RadioButton
            android:text="@string/radioButton"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>
        <CheckBox
            android:text="@string/checkBox"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:id="@+id/ck1"/>
        <Switch
            android:text="@string/enableSomething"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:id="@+id/switch1"/>
        <ImageButton
            android:layout_column="1"
            android:layout_row="1"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:id="@+id/button4"/>
    </GridLayout>

</RelativeLayout>